--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <header class="main-head">The header</header>
     <nav class="main-nav">
       <ul>
-        <li><a href="">🌗 OS Default</a></li>
-        <li><a href="">🌙 Dark Mode</a></li>
-        <li><a href="">😎 Light Mode</a></li>
+        <li><a href="#" id="default" onclick="d">🌗 OS Default</a></li>
+        <li><a href="#" id="dark" onclick="dark">🌙 Dark Mode</a></li>
+        <li><a href="#" id="light" onclick="light">😎 Light Mode</a></li>
       </ul>
     </nav>
     <article class="content">
@@ -36,5 +36,5 @@
   </div>
 
 </body>
-
+<script src="script.js"></script>
 </html>
