--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="tiny.css">
   <link rel="stylesheet" href="debug.css">
+  <link rel="stylesheet" href="dark.css">
 </head>
 
 <body class="">
