Everything but the os click should work

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header class="main-head">The header</header>
     <nav class="main-nav">
       <ul>
-        <li><a href="#" id="default" onclick="d">🌗 OS Default</a></li>
-        <li><a href="#" id="dark" onclick="dark">🌙 Dark Mode</a></li>
-        <li><a href="#" id="light" onclick="light">😎 Light Mode</a></li>
+        <li><a href="#" id="default" onclick="OS()">🌗 OS Default</a></li>
+        <li><a href="#" id="dark" onclick="dark()">🌙 Dark Mode</a></li>
+        <li><a href="#" id="light" onclick="light()">😎 Light Mode</a></li>
       </ul>
     </nav>
     <article class="content">
